frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: team01
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
